--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="kacang">Kacang</string>
     <string name="cipir">Cipir</string>
     <string name="populer">Populer</string>
+    <string name="lihat_semua">Lihat Semua</string>
 </resources>
