--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,17 @@
 
     <string name="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
     <string name="cek_sekarang">Cek Sekarang</string>
+    <string name="masuk_untuk_melihat_notifikasi">Masuk untuk melihat notifikasi</string>
+
+    <string name="profil">Profil</string>
+    <string name="akun_saya">Akun Saya</string>
+    <string name="pesanan">Pesanan</string>
+    <string name="personal_detail">Personal Detail</string>
+    <string name="lainnya">Lainnya</string>
+    <string name="bantuan">Bantuan</string>
+    <string name="tentang_kami">Tentang Kami</string>
+    <string name="privasi_dan_keamanan">Privasi dan Keamanan</string>
+    <string name="keluar">Keluar</string>
+    <string name="magdarini">Magdarini</string>
+    <string name="u0040magdarini">\@magdarini</string>
 </resources>
